organiser pictures added

--- a/index.html
+++ b/index.html
@@ -95,23 +95,27 @@
     </main>
 
     <footer>
-        <h3>E-Stitches is organised by</h3>
+        <h3>E-Stitches London is organised by</h3>
 
         <div class="organisers">
-            <div class="organiser">
-                <div>Camille Baker, media artist, curator, researcher and reader at the UCA. Author of a book on mobile and wearable performance due 2017.</div>
-                <div><a href="http://swampgirl.net">camillebaker.me</a></div>
-                <div class="bodytext-italic">@swampgirl67</div>
-            </div>
 
             <div class="organiser">
-                <div>Melissa Coleman, international artist and curator of wearables exhibitions. Creative Technologist at Hackaball.</div>
+                <img class="organiser-img" src="../img/team/melissa_coleman.jpg"/>
+                <div class="organiser-description">Melissa Coleman, international artist, curator of wearables exhibitions and software-developer. Specialised in IoT prototyping and web.</div>
                 <div><a href="http://melissacoleman.nl">melissacoleman.nl</a></div>
                 <div class="bodytext-italic">@liskatecoleman</div>
             </div>
 
             <div class="organiser">
-                <div>Irini Papadimitriou, Head of New Media Arts Development Watermans, V&amp;A Digital Programmes Manager, Digital Design Weekend, Digital Futures.</div>
+                <img class="organiser-img" src="../img/team/camille_baker.jpg"/>
+                <div class="organiser-description">Camille Baker, media artist, curator, researcher and reader at the UCA. Author of a book on mobile and wearable performance due 2018.</div>
+                <div><a href="http://swampgirl.net">camillebaker.me</a></div>
+                <div class="bodytext-italic">@swampgirl67</div>
+            </div>
+
+            <div class="organiser">
+                <img class="organiser-img" src="../img/team/irini_papadimitriou.jpg"/>
+                <div class="organiser-description">Irini Papadimitriou, Head of New Media Arts Development Watermans, V&amp;A Digital Programmes Manager, Digital Design Weekend, Digital Futures.</div>
                 <div class="bodytext-italic">@irini_mirena</div>
             </div>
         </div>
