--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="organiser">
                 <img class="organiser-img" src="../img/team/camille_baker.jpg"/>
                 <div class="organiser-description">Camille Baker, media artist, curator, researcher and reader at the UCA. Author of a book on mobile and wearable performance due 2018.</div>
-                <div><a href="http://swampgirl.net">camillebaker.me</a></div>
+                <div><a href="camillebaker.me">camillebaker.me</a></div>
                 <div class="bodytext-italic">@swampgirl67</div>
             </div>
 
