--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     });
 } catch (e) {}
 </script>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAtjpC5s28qHRqoDR7s9yKtzOo7hqDu8Xc"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjpC5s28qHRqoDR7s9yKtzOo7hqDu8Xc"></script>
     <!--	<script src="js/libs/modernizr-2.0.6.min.js"></script>-->
     <script src="js/libs/main.js"></script>
 
