new meetup details

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section class="location information_block">
             <div class="location-info">
-                <p><span>GreenLab</span><br/>
+                <p><span>GreenLab (currently only online)</span><br/>
                 Corner of Keeton’s Road and Collett Road, Bermondsey,
                 <br/>London SE1 6SB<br/>
                     <a href="https://citymapper.com/go/nzvfmjv97r">public transport</a>
